tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/inline-table/double-comma.stderr
TOML parse error at line 1, column 9
  |
1 | t = {x=3,,y=4}
  |         ^
invalid inline table
expected `}`
